app/containers/MainLayout/style.scss
@import '../../styles/global-styles';

.APP-MAIN-WRAPPER {
  height: 100%;
  display: flex;
}

.MAIN-NAVIGATION {
  width: $nav-width;
  [class*="AnchorLeft"] {
    width: $nav-width;
    box-shadow: 1px 0 4px 0 rgba(0,0,0,0.1);
  }
}

.Nav-Wrapper {
  background: #fff;
  width: $nav-width;
  vertical-align: top;
}

.Content-Wrapper {
  width: calc(100% - #{$nav-width});
  max-height: 100vh;
  overflow: hidden;
  & > section {
    padding: 3rem;
    min-height: calc(100% - 92px);
  }
  .loading-indicator {
    min-height: calc(100% - 92px);
    margin: 0rem auto;
    padding-top: 25%;
  }
}

.Overlay {
  height: 100%;
}

.EMM-Report-Overlay {
  position: fixed;
  height: 100%;
  width: 100%;
  background: #F5F5F5;
  z-index: 999;
}

